# osmosispy

./: .gitignore  README.md  pyproject.toml
osmosis_proto/proto/dydxprotocol/accountplus/: accountplus_pb2.py  accountplus_pb2.pyi  genesis_pb2.py  genesis_pb2.pyi  models_pb2.py  models_pb2.pyi  params_pb2.py  params_pb2.pyi  query_pb2.py  query_pb2.pyi  tx_pb2.py  tx_pb2.pyi
osmosis_proto/proto/dydxprotocol/affiliates/: affiliates_pb2.py  affiliates_pb2.pyi  genesis_pb2.py  genesis_pb2.pyi  query_pb2.py  query_pb2.pyi  tx_pb2.py  tx_pb2.pyi
osmosis_proto/proto/dydxprotocol/assets/: asset_pb2.py  asset_pb2.pyi  genesis_pb2.py  genesis_pb2.pyi  query_pb2.py  query_pb2.pyi  tx_pb2.py
osmosis_proto/proto/dydxprotocol/blocktime/: blocktime_pb2.py  blocktime_pb2.pyi  genesis_pb2.py  genesis_pb2.pyi  params_pb2.py  params_pb2.pyi  query_pb2.py  query_pb2.pyi  tx_pb2.py  tx_pb2.pyi
osmosis_proto/proto/dydxprotocol/bridge/: bridge_event_info_pb2.py  bridge_event_info_pb2.pyi  bridge_event_pb2.py  bridge_event_pb2.pyi  genesis_pb2.py  genesis_pb2.pyi  params_pb2.py  params_pb2.pyi  query_pb2.py  query_pb2.pyi  tx_pb2.py  tx_pb2.pyi
osmosis_proto/proto/dydxprotocol/clob/: block_rate_limit_config_pb2.py  block_rate_limit_config_pb2.pyi  clob_pair_pb2.py  clob_pair_pb2.pyi  equity_tier_limit_config_pb2.py  equity_tier_limit_config_pb2.pyi  finalize_block_pb2.py  finalize_block_pb2.pyi  genesis_pb2.py  genesis_pb2.pyi  liquidations_config_pb2.py  liquidations_config_pb2.pyi  liquidations_pb2.py  liquidations_pb2.pyi  matches_pb2.py  (+17 more)
scripts/: generate_python_from_protobuf.py
(+331 files in other folders)
