[tool.poetry]
name = "osmosisproto"
version = "1.0.0"
description = "Osmosis Profobuf files"
packages = [{ include = "osmosis_proto" }]
authors = ["sbneo2022"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"
protobuf = "^5.29.3"
protobuf-init = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
